# GenericMichell

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  SOURCE_COMMIT  THIRD_PARTY.md
examples/: wigley.py  wigley_sweep.py
ext/xfoil/: XFoil.cpp
python/: main.cpp  paper_configuration.py
src/: environment.h  holtrop.h  hull.h  interpolation.h  localflow.h  mesh.h  planing.h  profilegrid.h  propeller.h  resistance.h  sectional.h  streamline.h  thinship.h  tools.h
tests/: smoke_test.py
